# GLOW

./: .gitignore  GLOW.py  GLOWapp.ipynb  LICENSE  ML.py  README.md  glow.ipynb  glow.spec  glowapp.ipynb  pyproject.toml  requirements.txt
GLOWcode/: GLOW.py  ML.py  README.md
docs/: info.md
docs/example/: example.csv  example.gcode
glow++/: CMakeLists.txt
glow++/assets/img/: icon.icns
glow++/docs/: info.md
glow++/src/: CMakeLists.txt  main.cpp
glow++/src/ui/: glowwindow.cpp  glowwindow.h  glowwindow.ui
glow++/src/widgets/: canvas.cpp  canvas.h  dataframe.cpp  dataframe.h  filedrop.cpp  filedrop.h
glow_lite/: glow_lite.ipynb  glow_lite.spec
glow_lite/docs/: info_lite.md
glow_lite/src/: glow_lite.py  main_lite.py
src/: GLOW.py  ML.py  glow.py  main.py  ml(old).py  ml.py
